FIXING: Made numerous css styling changes including using media queries to get the text to be responsive on smaller screens. Re-made Header to have both words span 2 diff lines also for mobile performance. Restyled directions links in red

--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -5,12 +5,13 @@ body {
     font-family: 'Modak', cursive;
     font-size: 72px;
     letter-spacing: 16px;
+    line-height: inherit;
 }
 
 #navBar {
     margin: 1rem auto;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     background-color: rgb(245, 229, 236);
     box-shadow: rgb(216, 96, 88) 1px 1px 2px 2px;
     transition: ease-in-out 1s;
